PPJ/Kutije/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Naredba ';' Program
    2        | Naredba

    3 Naredba: kutija_token id_token '(' tezina_token ')' '=' E
    4        | kutija_token id_token '(' tezina_token ')'
    5        | puna_token '(' E ')'
    6        | prikazi_token '(' E ')'
    7        | prazna_token '(' E ')'

    8 E: '[' niz_brojeva ']'
    9  | id_token

   10 niz_brojeva: niz_brojeva ',' broj_token
   11            | niz_brojeva ',' tezina_token
   12            | broj_token
   13            | tezina_token


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 4 5 6 7
    ')' (41) 3 4 5 6 7
    ',' (44) 10 11
    ';' (59) 1
    '=' (61) 3
    '[' (91) 8
    ']' (93) 8
    error (256)
    kutija_token (258) 3 4
    prikazi_token (259) 6
    puna_token (260) 5
    prazna_token (261) 7
    broj_token <broj_type> (262) 10 12
    id_token <string_type> (263) 3 4 9
    tezina_token <tezina_type> (264) 3 4 11 13


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    Program (18)
        on left: 1 2
        on right: 0 1
    Naredba (19)
        on left: 3 4 5 6 7
        on right: 1 2
    E <kutija_type> (20)
        on left: 8 9
        on right: 3 5 6 7
    niz_brojeva <kutija_type> (21)
        on left: 10 11 12 13
        on right: 8 10 11


State 0

    0 $accept: . Program $end

    kutija_token   shift, and go to state 1
    prikazi_token  shift, and go to state 2
    puna_token     shift, and go to state 3
    prazna_token   shift, and go to state 4

    Program  go to state 5
    Naredba  go to state 6


State 1

    3 Naredba: kutija_token . id_token '(' tezina_token ')' '=' E
    4        | kutija_token . id_token '(' tezina_token ')'

    id_token  shift, and go to state 7


State 2

    6 Naredba: prikazi_token . '(' E ')'

    '('  shift, and go to state 8


State 3

    5 Naredba: puna_token . '(' E ')'

    '('  shift, and go to state 9


State 4

    7 Naredba: prazna_token . '(' E ')'

    '('  shift, and go to state 10


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 6

    1 Program: Naredba . ';' Program
    2        | Naredba .

    ';'  shift, and go to state 12

    $default  reduce using rule 2 (Program)


State 7

    3 Naredba: kutija_token id_token . '(' tezina_token ')' '=' E
    4        | kutija_token id_token . '(' tezina_token ')'

    '('  shift, and go to state 13


State 8

    6 Naredba: prikazi_token '(' . E ')'

    id_token  shift, and go to state 14
    '['       shift, and go to state 15

    E  go to state 16


State 9

    5 Naredba: puna_token '(' . E ')'

    id_token  shift, and go to state 14
    '['       shift, and go to state 15

    E  go to state 17


State 10

    7 Naredba: prazna_token '(' . E ')'

    id_token  shift, and go to state 14
    '['       shift, and go to state 15

    E  go to state 18


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    1 Program: Naredba ';' . Program

    kutija_token   shift, and go to state 1
    prikazi_token  shift, and go to state 2
    puna_token     shift, and go to state 3
    prazna_token   shift, and go to state 4

    Program  go to state 19
    Naredba  go to state 6


State 13

    3 Naredba: kutija_token id_token '(' . tezina_token ')' '=' E
    4        | kutija_token id_token '(' . tezina_token ')'

    tezina_token  shift, and go to state 20


State 14

    9 E: id_token .

    $default  reduce using rule 9 (E)


State 15

    8 E: '[' . niz_brojeva ']'

    broj_token    shift, and go to state 21
    tezina_token  shift, and go to state 22

    niz_brojeva  go to state 23


State 16

    6 Naredba: prikazi_token '(' E . ')'

    ')'  shift, and go to state 24


State 17

    5 Naredba: puna_token '(' E . ')'

    ')'  shift, and go to state 25


State 18

    7 Naredba: prazna_token '(' E . ')'

    ')'  shift, and go to state 26


State 19

    1 Program: Naredba ';' Program .

    $default  reduce using rule 1 (Program)


State 20

    3 Naredba: kutija_token id_token '(' tezina_token . ')' '=' E
    4        | kutija_token id_token '(' tezina_token . ')'

    ')'  shift, and go to state 27


State 21

   12 niz_brojeva: broj_token .

    $default  reduce using rule 12 (niz_brojeva)


State 22

   13 niz_brojeva: tezina_token .

    $default  reduce using rule 13 (niz_brojeva)


State 23

    8 E: '[' niz_brojeva . ']'
   10 niz_brojeva: niz_brojeva . ',' broj_token
   11            | niz_brojeva . ',' tezina_token

    ']'  shift, and go to state 28
    ','  shift, and go to state 29


State 24

    6 Naredba: prikazi_token '(' E ')' .

    $default  reduce using rule 6 (Naredba)


State 25

    5 Naredba: puna_token '(' E ')' .

    $default  reduce using rule 5 (Naredba)


State 26

    7 Naredba: prazna_token '(' E ')' .

    $default  reduce using rule 7 (Naredba)


State 27

    3 Naredba: kutija_token id_token '(' tezina_token ')' . '=' E
    4        | kutija_token id_token '(' tezina_token ')' .

    '='  shift, and go to state 30

    $default  reduce using rule 4 (Naredba)


State 28

    8 E: '[' niz_brojeva ']' .

    $default  reduce using rule 8 (E)


State 29

   10 niz_brojeva: niz_brojeva ',' . broj_token
   11            | niz_brojeva ',' . tezina_token

    broj_token    shift, and go to state 31
    tezina_token  shift, and go to state 32


State 30

    3 Naredba: kutija_token id_token '(' tezina_token ')' '=' . E

    id_token  shift, and go to state 14
    '['       shift, and go to state 15

    E  go to state 33


State 31

   10 niz_brojeva: niz_brojeva ',' broj_token .

    $default  reduce using rule 10 (niz_brojeva)


State 32

   11 niz_brojeva: niz_brojeva ',' tezina_token .

    $default  reduce using rule 11 (niz_brojeva)


State 33

    3 Naredba: kutija_token id_token '(' tezina_token ')' '=' E .

    $default  reduce using rule 3 (Naredba)
